<resources>
    <string name="app_name">Angulos</string>
    <string name="text_view_1">Funciones</string>
    <string name="text_view_2">Grados</string>

    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>

    <string name="gd_45">45</string>
    <string name="gd_90">90</string>
    <string name="gd_180">180</string>

    <string name="result">Resultado</string>

</resources>